# Epistemic-agentic-runtime-with-spec-mgmt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.bat  install.ps1  install.sh
.stages/: stage-0.complete  stage-1.complete  stage-2.complete  stage-3.complete  stage-4.complete  stage-5.complete  stage-6.complete  stage-7.complete
docs/: README.md  TELEMETRY.md  VALIDATION.md  _navbar.md  _sidebar.md  about.html  atlas.html  concepts.html  gap-analysis.md  getting-started.html  glossary.md  index.html  lens-evaluation.md  progressive-formalization.md  protocol.md  quickstart.md  roles.html  scaling-stages.md  understanding-elcs.md  validation.html  why-elcs.md  workflows.html
docs/assets/: base.css  components.css  script.js  style.css  styles.css
epistemic/: assumptions.md  constraints.md  evidence.md  hypotheses.md  state.json
epistemic/journal/: checkpoint-001.md  checkpoint-002.md  checkpoint-003.md  checkpoint-004.md  checkpoint-005.md  checkpoint-006.md  checkpoint-007-validation-complete.md  checkpoint-008-atlas-integration.md  checkpoint-009-docs-audit.md
generator/: README.md  pyproject.toml
generator/src/create_elcs/: __init__.py  __main__.py  cli.py
protocol/: conflict-resolution.md  gates.md
protocol/lenses/: README.md
protocol/schemas/: README.md  coalition-contract.schema.json  codec.schema.json  cognitive-cone.schema.json  distance-vector.schema.json  epistemic-state.schema.json  journal-checkpoint.schema.json  lens-output.schema.json  (+2 more)
template/: .cursorrules  .windsurfrules  AGENTS.md  CLAUDE.md  README.md
(+32 files in other folders)
